--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ volumes:
 services:
   elasticsearch:
     container_name: elasticsearch
-    image: docker.elastic.co/elasticsearch/elasticsearch:latest
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.12.1
     restart: unless-stopped
     ports:
       - "9200:9200"
@@ -22,7 +22,7 @@ services:
     volumes:
       - esdata01:/usr/share/elasticsearch/data
   kibana:
-    image: docker.elastic.co/kibana/kibana:latest
+    image: docker.elastic.co/kibana/kibana:7.12.1
     container_name: kibana
     restart: unless-stopped
     ports:
